--- a/src/components/styles/Jobdetails.module.css
+++ b/src/components/styles/Jobdetails.module.css
@@ -7,6 +7,10 @@
     width: 100%;
     /* margin-top: 30px; */
 }
+.dark{
+    background-color: var(--dark);
+    color: #fff;
+}
 .gray{
     color: #777;
 }
