--- a/src/components/styles/Jobs.module.css
+++ b/src/components/styles/Jobs.module.css
@@ -4,6 +4,18 @@
     justify-content: space-around;
     flex-wrap: wrap;
     padding-top: 30px;
+    width: 80%;
+    margin: auto;
+}
+@media only screen and (max-width: 1060px){
+    .jobs{
+        width: 90%;
+    }
+}
+@media only screen and (max-width: 900px){
+    .jobs{
+        width: 100%;
+    }
 }
 .blue{
     color: var(--blue);
